BVR-531 fixed overlapping hit on image upload error

--- a/app/assets/stylesheets/application/core.sass
+++ b/app/assets/stylesheets/application/core.sass
@@ -614,6 +614,7 @@ button,
       margin-top: 30px
       
       + mark.error
+        margin-bottom: 30px
         margin-top: -85px
 
 
